@@ -1,5 +1,5 @@
 package com.shtrih.util;
 
 public class ServiceVersion {
-    public static final String VERSION = "449-2-ge33ac4a";
+    public static final String VERSION = "450";
 }
